--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "vue-infinite-scroll": "^2.0.2",
         "vue-router": "^3.0.2",
         "vuex": "^3.0.1"
     }
