animation testing and fking npm cache fix

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "vue-infinite-scroll": "^2.0.2",
         "vue-router": "^3.0.2",
+        "vue2-animate": "^2.1.0",
         "vuex": "^3.0.1"
     }
 }
